Added visualisation, reoriented social links

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@
 
 .social{
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
     right: 1rem;
     top: 1rem;
 }
@@ -76,3 +79,43 @@ header{
     background: #60b2d3;
 }
 
+@keyframes jump {
+    0% {
+        bottom: 0%;
+        left:20%;
+    }
+    50%{
+        bottom:50%;
+        left:50%
+    }
+    100%{
+        bottom:0%;
+        left: 80%;
+    }
+}
+
+.visual > div{
+    position: absolute; 
+    height: 2.5rem;
+    width: 2.5rem;
+    border-radius: 50%;
+    bottom: 0%;
+    z-index: -1;
+}
+
+@media screen and (orientation: portrait) {
+    @keyframes jump {
+        0% {
+            top: 20%;
+            left:0%;
+        }
+        50%{
+            top:50%;
+            left:50%;
+        }
+        100%{
+            top:10%;
+            left:100%;
+        }
+    }
+}
